# CatWiki

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  README_EN.md  docker-compose.dev.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile.dev  Dockerfile.prod  Makefile  inspect_db.py  pyproject.toml  reproduce_serialization.py  verify_graph.py
backend/alembic/: env.py
backend/alembic/versions/: 09c3ac2de938_add_parse_meta_to_document.py  7a8b9c0d1e2f_add_tenant_support.py  a1b2c3d4e5f6_add_chat_sessions_table.py  b2c3d4e5f6a7_add_document_view_events.py  ce_add_chat_message_feedback.py  ce_add_data_sources_table.py  ce_add_session_source.py  ce_add_site_show_pipeline_trace.py  ce_d161a6891c2d_initial_schema.py  ce_drop_ai_vl_config.py  d161a6891c2d_initial_schema.py  d161a6891c2d_initial_schema_and_admin_user.py
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/core/: __init__.py  cache.py  checkpointer.py  config.py  deps.py  dynamic_config.py  dynamic_config_manager.py  embeddings.py  exceptions.py  graph.py  logger.py  middleware.py  openapi_utils.py  rag_utils.py  reading_time.py  reranker.py  rustfs.py  system_config_init.py  tenant.py  utils.py  vector_store.py
backend/app/crud/: __init__.py  base.py  chat_message_feedback.py  collection.py  data_source.py  site.py  (+6 more)
backend/scripts/: backfill_ip_location.py  check_db_config.py  check_indexes.py  fix_tenant_2_permissions.py  generate_sdk.py  init.py  init_admin_data.py  init_baby_data.py  init_baby_tenant.py  init_demo_data.py  init_health_data.py  init_health_tenant.py  init_rustfs.py  setup_demo_mode.py
backend/tests/: conftest.py
(+865 files in other folders)
